posts/get、posts/postの実装
