# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\UserController;
 use App\Http\Controllers\SessionController;
+use App\Http\Controllers\PostController;
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -15,14 +16,21 @@ use App\Http\Controllers\SessionController;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/user', function (Request $request) {
+        return $request->user();
+    });
+
+    Route::post('/session/register', [SessionController::class, 'register']); // ユーザー登録
+    Route::post('/session', [SessionController::class, 'login']); // ログイン
+    Route::delete('/session', [SessionController::class, 'logout']); // ログアウト
+
+    Route::get('/users/{userId}',[UserController::class, 'show']);
+    Route::put('/users/{userId}',[UserController::class, 'user']);
+
+    Route::get('/posts', [PostController::class, 'index']); // つぶやき投稿一覧
+    Route::post('/posts', [PostController::class, 'create']); // つぶやき投稿
 });
 
-Route::post('/session/register', [SessionController::class, 'register']); // ユーザー登録
-Route::post('/session', [SessionController::class, 'login']); // ログイン
-Route::delete('/session', [SessionController::class, 'logout']); // ログアウト
-
-Route::get('/user/{userId}',[UserController::class, 'show']);
-// Route::get('/user/{userId}', 'App\Http\Controllers\UserController@show');
-Route::put('/user/{userId}',[UserController::class, 'user']);
+// APIリクエストから有効なトークンを取得するには？
+// https://zenn.dev/yumemi_inc/articles/be65cfad4fea44
